--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/Menu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/Menu.cshtml
@@ -78,7 +78,7 @@
         }
     </nav>
 
-    <nav class="menubar-group">
+    <nav id="menubar-my-account" class="menubar-group">
         <div class="dropdown">
             <a class="menubar-link" @(Model.IsAuthenticated ? "data-toggle=dropdown" : "") aria-haspopup="true" aria-expanded="false" href="@accountUrl" rel="nofollow">
 
