Render product count for categories in OffCanvasMenu

--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuCategories.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuCategories.cshtml
@@ -37,12 +37,10 @@
         @foreach (var node in currentNode.Children)
         {
             var cat = node.Value;
-
-			@* TODO: (mh) render elements count per CSS (data-count) *@
             <li class="nav-item@(node.HasChildren ? " has-children" : "")" 
 				data-id="@cat.EntityId" 
-				data-ajax="@(node.HasChildren ? "true" : "false")" @Html.Attr("data-count", cat.ElementsCount.ToString(), cat.ElementsCount.HasValue)>
-                <a href="@node.Value.GenerateUrl(this.Url)" class="nav-link">
+				data-ajax="@(node.HasChildren ? "true" : "false")">
+                <a href="@node.Value.GenerateUrl(this.Url)" class="nav-link has-count" @Html.Attr("data-count", cat.ElementsCount.ToString(), cat.ElementsCount > 0)>
 					<span>@cat.Text</span>
                 </a>
             </li>
