--- a/src/Presentation/SmartStore.Web/Views/Search/Partials/Filters.OLD.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/Partials/Filters.OLD.cshtml
@@ -137,7 +137,7 @@
 
 @helper FacetLabel(Facet facet)
 {
-	<span class="facet-label" @Html.Attr("data-count", facet.HitCount.ToString("N0"), facet.HitCount > 0)>@(facet.Value.Label ?? facet.Value.ToString())</span>
+	<span class="facet-label has-count" @Html.Attr("data-count", facet.HitCount.ToString("N0"), facet.HitCount > 0)>@(facet.Value.Label ?? facet.Value.ToString())</span>
 }
 
 <script type="text/javascript">
