--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -289,6 +289,15 @@ a.pretty-link {
     }
 }
 
+.has-count[data-count]:after {
+    content: "(" attr(data-count) ")";
+    position: relative;
+    display: inline-block;
+	color: rgba($body-color, 0.6);
+	padding-left: 0.2rem;
+    font-weight: 400;
+}
+
 
 
 //
