Theming: added custom font icon library "Fontastic"

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
@@ -74,7 +74,7 @@ $ocm-horizontal-padding:                1.6rem;
             top: 50%;
             transform: translateY(-50%);
 
-            @include linearicon('\e876');
+            @include fontastic('\e93c');
             //@include fontawesome('\f054');
         }
     }
