--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -485,14 +485,14 @@ a.pretty-link {
 
 
 //
-// LinearIcons utils (ensure crisp icons with 20/40...px)
+// Fontastic utils (ensure crisp icons with 20/40...px)
 // ------------------------------------------------------
 
-.lnr        { font-size: 20px; display: inline-block; }
-.lnr-2x     { font-size: 40px; }
-.lnr-3x     { font-size: 60px; }
-.lnr-4x     { font-size: 80px; }
-.lnr-5x     { font-size: 100px; }
+.icm        { font-size: 20px; display: inline-block; }
+.icm-2x     { font-size: 40px; }
+.icm-3x     { font-size: 60px; }
+.icm-4x     { font-size: 80px; }
+.icm-5x     { font-size: 100px; }
 
 
 // Imaging
