--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -15,7 +15,7 @@
 	// add css assets
 	Html.AppendCssFileParts(
 		cssRoot + "font-awesome.css",
-		cssRoot + "linearicons.css",
+		cssRoot + "fontastic.css",
 		contentRoot + "pnotify/css/pnotify.css",
 		contentRoot + "pnotify/css/pnotify.mobile.css",
 		contentRoot + "pnotify/css/pnotify.buttons.css");
