--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
@@ -173,7 +173,7 @@ $facet-selection-color:             darken($brand-success, 15%);
     font-size: 14px;
 }
 
-.facet-toggle {
+.facet-group-header {
 	position: relative;
 	display: block;
     padding: 0.75rem 0;
@@ -181,7 +181,9 @@ $facet-selection-color:             darken($brand-success, 15%);
 	font-weight: 600;
 	color: $body-color !important;
 	text-decoration: none !important;
-    
+}
+
+.facet-toggle {
     &:after {
 	    display: block;
 	    position: absolute;
