Search: Renaming and minor correction

--- a/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/MultiSelect.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/MultiSelect.cshtml
@@ -4,7 +4,7 @@
 @using SmartStore.Services.Search.Extensions;
 
 @{
-	var facets = Model.Facets.ToList();
+	var facets = Model.Facets.Where(x => x.HitCount > 0 || x.Value.IsSelected).ToList();
 }
 
 @if (facets.Count > 7)
