--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/LanguageSelector.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/LanguageSelector.cshtml
@@ -19,7 +19,9 @@
             @foreach (var lang in Model.AvailableLanguages)
             {
                 var href = webHelper.ModifyQueryString(Url.RouteUrl("ChangeLanguage", new { langid = lang.Id }), "returnurl=" + Url.Encode(Model.ReturnUrls[lang.SeoCode]), null);
-                <a href="@href" title="@lang.NativeName" data-toggle="tooltip" rel="nofollow" class="dropdown-item" data-selected="@(lang.Equals(activeLang) ? "true" : "false")">
+                
+                <a href="@href" title="@lang.NativeName" data-toggle="tooltip" rel="nofollow" class="dropdown-item" 
+                   data-selected="@(lang.Equals(activeLang) ? "true" : "false")" data-abbreviation="@lang.SeoCode.ToUpper()">
                     @lang.Name
                     <span class="abbreviation">(@lang.SeoCode.ToUpper())</span>
                 </a>
