--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -407,15 +407,15 @@ a.pretty-link {
     }
 }
 
-.d-block            { display: block; }
-.d-inline           { display: inline; }
-.d-inline-block     { display: inline-block; }
-.d-flex             { display: flex; }
+.d-block                    { display: block !important; }
+.d-inline                   { display: inline !important; }
+.d-inline-block             { display: inline-block !important; }
+.d-flex                     { display: flex !important; }
 
-.flex-nowrap        { flex-wrap: nowrap !important; }
-.flex-wrap          { flex-wrap: wrap !important; }
-.flex-row           { flex-direction: row !important; }
-.flex-column        { flex-direction: column !important; }
+.flex-nowrap                { flex-wrap: nowrap !important; }
+.flex-wrap                  { flex-wrap: wrap !important; }
+.flex-row                   { flex-direction: row !important; }
+.flex-column                { flex-direction: column !important; }
 
 .justify-content-start      { justify-content: flex-start; }
 .justify-content-center     { justify-content: center; }
@@ -761,5 +761,58 @@ a.pretty-link {
         min-width: $choice-box-size-sm;
         .choice-box-img { max-width: calc(#{$choice-box-size-sm} - 4px); }          
     }
+}
+
+
+//
+// Category Menu
+// ------------------------------------------------------
+
+.catmenu-path {
+    margin-bottom: 0.4rem;
+    padding-bottom: 0.4rem;
+    border-bottom: 1px solid rgba(#000, 0.12);
+}
+
+.catmenu-link {
+    position: relative;
+    display: block;
+    color: $body-color;
+    line-height: 1.3;
+    padding: 0.25rem 0;
+    text-decoration: none !important;
+
+    .selected & {
+        font-weight: 700;
+    }
+
+    .expanded &,
+    .parent & {
+        padding-right: 1rem;
+
+        &:before {
+            @include fontawesome("\f105", 1.2rem);   
+            display: block;
+            position: absolute;
+            right: 0;
+            top: 3px; 
+        }
+    }
+
+    .expanded &:before {
+        content: '\f102';
+    }
+}
+
+a.catmenu-link:hover {
+    color: $gray-light;
+}
+
+.catmenu-path .catmenu-link {
+    font-weight: 600;
+}
+
+.catmenu-path .selected .catmenu-link {
+    font-size: 1rem;
 }
 
