--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
@@ -82,9 +82,12 @@ $ocm-horizontal-padding:                1.6rem;
             right: 1rem;
             top: 50%;
             transform: translateY(-50%);
-
             @include fontastic('\e93c');
-            //@include fontawesome('\f054');
+        }
+        &.has-children.animated:after {
+            animation: fa-spin .6s infinite linear;
+            margin-top: -9px;
+            @include fontastic('\e8d3');   
         }
     }
     
