Theming: IBreadcrumb interface and a shared breadcrumb template replace all utterly cluttered breadcrumb models and templates

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
@@ -55,9 +55,14 @@ h1, h2, h3, h4, h5, h6,
 //
 // Breadcrumb Styles
 // --------------------------------------------------
-#breadcrumb {
+
+.breadcrumb {
     padding: 0;
     background: none;
+}
+
+.breadcrumb > li + li::before {
+    content: '|';
 }
 
 
